package ar.edu.utn.frba.dds.model.dtos;

import lombok.Data;

@Data
public class FuenteDTO {
  private String tipoOrigen;
  private String url;
}
