package ar.edu.utn.frba.dds;

import lombok.Getter;
import lombok.Setter;

@Setter
@Getter
public class Ubicacion {
    private float longitud;
    private float latitud;
}
