package ar.edu.utn.frba.dds.domain.entities.roles;

public class Contribuyente implements Rol {

}
